@@ -187,9 +187,10 @@ class BeautifulSoupHTMLParser(HTMLParser):
 
     def handle_decl(self, data):
         self.soup.endData()
-        if data.startswith("DOCTYPE "):
-            data = data[len("DOCTYPE "):]
-        elif data == 'DOCTYPE':
+        doctype_len = len("DOCTYPE ")
+        if data[:doctype_len].lower() == "doctype ":
+            data = data[doctype_len:]
+        elif len(data) == doctype_len-1 and data.lower() == 'doctype':
             # i.e. "<!DOCTYPE>"
             data = ''
         self.soup.handle_data(data)
