@@ -18,5 +18,5 @@ Peixeiro. The version in this repository has been modified from
 https://github.com/czrpxr/BeautifulSoup4-ptbr-translation.
 
 doc.zh/source/index.rst is a 2018 Chinese translation by Deron
-Wang. The version in this repository has been copied from
+Wang. The version in this repository has been modified from
 https://github.com/DeronW/beautifulsoup.
