@@ -3,6 +3,9 @@
 * Fixed a deprecation warning on Python 3.7. Patch by Colin
   Watson. [bug=1847592]
 
+* The html.parser tree builder now correctly handles DOCTYPEs that are
+  not uppercase. [bug=1848401]
+
 * Added a Chinese translation by Deron Wang and a Brazilian Portuguese
   translation by Cezar Peixeiro to the repository.
 
